<?xml version="1.0"?>
<package format="3">
  <name>hma2_pcl_reconst</name>
  <version>0.0.1</version>
  <description>RGB+Depth -> XYZRGB PointCloud Component</description>

  <author>Ryohei Kobayashi</author>
  <maintainer email="kobayashi.ryohei621@mail.kyutech.jp">ry0hei-kobayashi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>depth_image_proc</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rclcpp_components/>
  </export>
</package>

